section feature and news: scss partials created for it with basic styling

--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -11,19 +11,76 @@
 
   //fonts
 
-  --f-body: u.rem(15);
-  --f-xl: clamp(
-    u.rem(40),
-    2.147887323943662rem + 1.5023474178403755vw,
-    u.rem(56)
-  );
+  --f-body: #{u.rem(15)};
+  --f-xl: #{clamp(
+      u.rem(40),
+      2.147887323943662rem + 1.5023474178403755vw,
+      u.rem(56)
+    )};
 
-  --f-l: clamp(
-    u.rem(32),
-    1.823943661971831rem + 0.7511737089201878vw,
-    u.rem(40)
-  );
-  --f-m: u.rem(32);
-  --f-s: u.rem(20);
-  --f-xs: u.rem(18);
+  --f-l: #{clamp(
+      u.rem(32),
+      1.823943661971831rem + 0.7511737089201878vw,
+      u.rem(40)
+    )};
+  --f-m: #{u.rem(32)};
+  --f-s: #{u.rem(20)};
+  --f-xs: #{u.rem(18)};
+}
+
+html {
+  font-size: 100%;
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+body {
+  margin: 0;
+  min-height: 100vh;
+  font-family: 'Inter', sans-serif;
+  font-size: u.rem(15);
+  line-height: 1.7;
+  color: var(--c-gray);
+}
+
+h1,
+h2,
+h3 {
+  line-height: 1.1;
+  color: var(--c-blue);
+}
+
+h1,
+h2,
+h3,
+p {
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  list-style-type: none;
+}
+.wrapper {
+  width: min(u.rem(1110), calc(100% - u.rem(32)));
+  margin-inline: auto;
 }
