mobile layout finished

--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -68,7 +68,7 @@ a {
 
 img {
   display: block;
-  max-width: 100%;
+  width: 100%;
   height: auto;
 }
 
@@ -83,4 +83,9 @@ li {
 .wrapper {
   width: min(u.rem(1110), calc(100% - u.rem(32)));
   margin-inline: auto;
+}
+
+.grid {
+  display: grid;
+  gap: u.rem(64);
 }
