--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -4,7 +4,7 @@
   &__logo {
     width: u.rem(45);
 
-    @media (width >= u.rem(1110)) {
+    @media (width >= u.em(1110)) {
       width: u.rem(64);
     }
   }
@@ -14,7 +14,7 @@
     font-size: u.rem(18);
     line-height: 1.3;
 
-    @media (width >= u.rem(1110)) {
+    @media (width >= u.em(1110)) {
       font-size: var(--f-body);
       color: var(--c-gray);
     }
