desktop header and active states

--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -64,6 +64,8 @@ p {
 
 a {
   text-decoration: none;
+  transition: 150ms ease-in-out;
+  transition-property: color, background-color;
 }
 
 img {
