--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,9 +1,11 @@
 @use '../util' as u;
 
 .header {
+  padding-block: u.rem(30);
+  display: flex;
+  justify-content: space-between;
+
   @media (width >= u.em(1110)) {
-    display: flex;
-    justify-content: space-between;
     padding-block: u.rem(90) u.rem(55);
   }
 
@@ -16,9 +18,12 @@
   }
 
   &__links {
-    @media (width >= u.em(1110)) {
-      display: flex;
-      gap: u.rem(40);
+    display: flex;
+    gap: u.rem(40);
+
+    @media (width < u.em(1110)) {
+      flex-direction: column;
+      gap: u.rem(24);
     }
   }
 
