--- a/scss/components/_nav.scss
+++ b/scss/components/_nav.scss
@@ -14,6 +14,10 @@
   &__open[aria-expanded='true'] {
     ~ .nav__content {
       translate: 0;
+
+      @media (prefers-reduced-motion) {
+        opacity: 1;
+      }
     }
 
     ~ .nav__overlay {
@@ -30,6 +34,12 @@
       padding: u.rem(30);
       translate: 100vw 0;
       transition: translate 500ms ease-in-out;
+    }
+
+    @media (prefers-reduced-motion) {
+      translate: 0;
+      opacity: 0;
+      transition: opacity 500ms ease-in-out;
     }
   }
 
