--- a/scss/components/_blog.scss
+++ b/scss/components/_blog.scss
@@ -7,7 +7,7 @@
   @media (width >= u.em(1110)) {
     grid-template-columns: subgrid;
     grid-column: 1 / -1;
-    padding-block-start: u.rem(40);
+    padding-block: u.rem(40) u.rem(90);
   }
 
   &__item {
